# book_recommendation_project

./: .gitignore  Book_Rec_Notebook.ipynb  Open_Library_Fiction_550.csv  README.md  Untitled.ipynb  app.py  config.yaml  pyproject.toml
.virtual_documents/: Book_Rec_Notebook-Chiara.ipynb  Book_Rec_Notebook.ipynb
.virtual_documents/data/processed/: Untitled.ipynb
.virtual_documents/notebooks/: EDA_Ako.ipynb  EDA_ouhai.ipynb  EDA_ratings_genre.ipynb  Streamlit_implementation.ipynb  Untitled.ipynb  christos.ipynb  data_cleaning_2.ipynb  tags.ipynb  webscraping_API.ipynb
data/processed/: Open_Library_Biography_400.csv  Open_Library_History_600.csv  books_dedup.csv  df_final_scored_with_descriptions.csv  df_post_drop_scored.csv  final_data.csv  final_data_clean.jsonl  genre_frequencies.csv  goodreads_books.csv  goodreads_books_2.csv
data/raw/: Open_Library_Fiction_1000.csv  goodreads_books.jsonl
notebooks/: Book_Rec_Notebook.ipynb  EDA_Ako.ipynb  EDA_ouhai.ipynb  EDA_rating vs mood.ipynb  EDA_ratings_genre.ipynb  Streamlit_implementation.ipynb  Untitled.ipynb  alan.ipynb  amz_link_function  christos.ipynb  data_cleaning.ipynb  data_cleaning_2.ipynb  ml.ipynb  tags.ipynb  webscraping_API.ipynb
scr/: crawl_listopia.py  jsonl_to_csv.py
src/: amz_link_function  crawl_listopia.py  crawl_listopia_fixed.py  jsonl_to_csv.py
